# webdsl-model

./: .gitignore  CHANGELOG.md  Makefile  README.md  webdsl-model.cabal
src/: Arith.hs  Bool.hs  Effects.hs  Free.hs  Infrastructure.hs  Syntax.hs  Utils.hs  notes.md
src/Actions/: Arith.hs  Bool.hs  Effects.hs  Framework.hs  FrameworkIO.hs  Str.hs  Syntax.hs  Values.hs
src/Actions/Effects/: Abort.hs  Cond.hs  Env.hs  MLState.hs
src/Actions/Handlers/: Cond.hs  Entity.hs  Env.hs  Heap.hs  Return.hs
src/Actions/Modules/Arith/: Denotation.hs  Syntax.hs
src/Actions/Modules/Bool/: Denotation.hs  Syntax.hs
src/Actions/Modules/Col/: Denotation.hs  Syntax.hs
src/Actions/Modules/Entity/: Denotation.hs  Syntax.hs
src/Actions/Modules/Eval/: Denotation.hs  Syntax.hs
src/Actions/Modules/Expr/: Denotation.hs  Syntax.hs
src/Actions/Modules/Fun/: Denotation.hs  Syntax.hs
src/Actions/Modules/Phases/: Denotation.hs  Syntax.hs
src/Actions/Modules/Stmt/: Denotation.hs  Syntax.hs
src/Actions/Modules/Str/: Denotation.hs  Syntax.hs
src/Arith/: Denotation.hs  Denotation.md  Handlers.hs  Interface.hs  Syntax.hs  Syntax.md
src/Attributes/: Denotation.hs  Effects.hs  Handlers.hs  Syntax.hs
src/Bool/: Denotation.hs  Denotation.md  Effects.hs  Effects.md  Handlers.hs  Handlers.md  Interface.hs  Syntax.hs  Syntax.md
src/Col/: Composition.hs  Denotation.hs  Denotation.md  Syntax.hs  Syntax.md
src/Definitions/: Syntax.hs
src/Definitions/Entity/: Denotation.hs  Framework.hs  Syntax.hs
src/Definitions/Fun/: Denotation.hs  Framework.hs  Syntax.hs
src/Definitions/GlobalVars/: ActionsFramework.hs  Denotation.hs  Effects.hs  Syntax.hs  TemplatesFramework.hs
src/Definitions/Pages/: Denotation.hs  Framework.hs  Syntax.hs
src/Definitions/Program/: Denotation.hs  Effects.hs  Handlers.hs  Syntax.hs
src/Definitions/Templates/: Denotation.hs  Framework.hs  Syntax.hs
src/Entity/: Denotation.hs  Effects.hs  Handlers.hs  Syntax.hs
src/Eval/: Denotation.hs  Denotation.md  Effects.hs  Effects.md  Handlers.hs  Handlers.md  Interface.hs  Syntax.hs  Syntax.md
src/Expr/: Denotation.hs  Denotation.md  Interface.hs  Syntax.hs  Syntax.md
src/Fun/: Denotation.hs  Denotation.md  Effects.hs  Effects.md  Handlers.hs  Handlers.md  Interface.hs  Syntax.hs  Syntax.md
src/Layout/: Denotation.hs  Effects.hs  Handlers.hs  Syntax.hs
src/List/: Syntax.hs
src/Page/: Denotation.hs  Syntax.hs
src/PhasesFramework/: Action.hs  Databind.hs  Framework.hs  Handlers.hs  Program.hs  Validate.hs
src/Program/: Denotation.hs  Effects.hs  Handlers.hs  Syntax.hs
src/Render/: Denotation.hs  Syntax.hs
src/Stmt/: Denotation.hs  Denotation.md  Effects.hs  Effects.md  Handlers.hs  Handlers.md  Interface.hs  Syntax.hs  Syntax.md
src/Str/: Denotation.hs  Denotation.md  Syntax.hs  Syntax.md
src/Template/: Syntax.hs
src/Templates/: Effects.hs  Framework.hs  FrameworkIO.hs  Syntax.hs
src/Templates/Handlers/: Env.hs  Forms.hs  Layout.hs  Render.hs
src/Templates/Modules/Attributes/: Denotation.hs  Syntax.hs
src/Templates/Modules/Forms/: Denotation.hs  PhasesDenotation.hs  Syntax.hs
src/Templates/Modules/Layout/: Denotation.hs  Syntax.hs
src/Templates/Modules/Lift/: Denotation.hs  Syntax.hs
src/Templates/Modules/Page/: Denotation.hs  PhasesDenotation.hs  Syntax.hs
src/Templates/Modules/Phases/: Denotation.hs  Syntax.hs
src/Templates/Modules/Render/: Denotation.hs  Syntax.hs
src/Utils/: Composition.hs  Denote.hs  Environment.hs  Fix.hs  Free.hs  Handler.hs
test/: ActionsTest.hs  ArithBoolTest.hs  ArithTest.hs  BoolTest.hs  ColTest.hs  EntityTest.hs  EvalTest.hs  ExprTest.hs  FunTest.hs  FunTesta.hs  LayoutTest.hs  LoopTest.hs  Main.hs  StmtTest.hs  StrTest.hs  TemplatesTest.hs  TestSyntax.hs  XmlTest.hs
test/Actions/: ArithBoolTest.hs  ArithTest.hs  BoolTest.hs  ColTest.hs  EntityTest.hs  EvalTest.hs  ExprTest.hs  FunTest.hs  GlobalVarTest.hs  LoopTest.hs  StmtTest.hs  StrTest.hs
test/Actions/dbs/: test1.txt  test2.txt  test3.txt
test/Templates/: FormsTest.hs  GlobalVarTest.hs  LayoutTest.hs  PageTest.hs  PhasesTest.hs  TemplateTest.hs  XmlTest.hs
test/Templates/dbs/: test1.txt
test/Templates/dbs/forms/: test double label.txt
test/Templates/dbs/phases/: button.txt  property.txt  redirect.txt  systemTest.txt
