cabal-version:      3.8
name:               webdsl-model
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aleksander Wolska
maintainer:         odderwiser@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Arith.Syntax, Arith.Denotation,
                        Attributes.Syntax, Attributes.Denotation, Attributes.Effects, Attributes.Handlers,
                        Bool.Syntax,  Bool.Denotation,   Bool.Effects, Bool.Handlers,
                        Entity.Syntax, Entity.Denotation, Entity.Effects, Entity.Handlers,
                        Expr.Syntax,  Expr.Denotation, 
                        Eval.Syntax,  Eval.Denotation,   Eval.Effects, Eval.Handlers,
                        Fun.Syntax,   Fun.Denotation,    Fun.Effects,  Fun.Handlers,
                        Col.Syntax,   Col.Denotation,
                        Layout.Syntax,Layout.Denotation, Layout.Effects, Layout.Handlers,
                        Page.Syntax, Page.Denotation,
                        Program.Syntax, Program.Denotation, Program.Effects, Program.Handlers,
                        Stmt.Syntax,  Stmt.Denotation,   Stmt.Effects, Stmt.Handlers,
                        Syntax,
                        Template.Syntax,
                        Utils.Free, Utils.Handler, Utils.Composition,
                        Utils.Fix, Utils.Denote, Utils.Environment

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1,
                        containers
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: AllowAmbiguousTypes,
                        DeriveFunctor,
                        EmptyCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        FunctionalDependencies,
                        GADTs,
                        InstanceSigs,
                        LambdaCase,
                        MultiParamTypeClasses,
                        RankNTypes,
                        ScopedTypeVariables,
                        TypeApplications,
                        TypeOperators,
                        UndecidableInstances
                        --this might couse problems

test-suite webdsl-tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      ArithTest,
                        ArithBoolTest, 
                        BoolTest,
                        ColTest,
                        TestSyntax,
                        EntityTest,
                        ExprTest,
                        EvalTest,
                        FunTest,
                        LoopTest,
                        StmtTest,
                        LayoutTest
    build-depends:      base ^>=4.17.2.0, 
                        HUnit ^>=1.6,
                        webdsl-model
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions: FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        TypeOperators,
                        TypeApplications
    ghc-options:         -Wno-missing-fields
