cabal-version:      3.8
name:               webdsl-model
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aleksander Wolska
maintainer:         odderwiser@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Actions.Effects,
        Actions.Framework,
        Actions.Arith,
        Actions.Bool,
        Actions.Str,
        Actions.Syntax,
        Actions.Handlers.Cond,
        Actions.Handlers.Env,
        Actions.Handlers.Heap,
        Actions.Handlers.Return,
        Actions.Modules.Arith.Denotation,
        Actions.Modules.Arith.Syntax,
        Actions.Modules.Bool.Denotation,
        Actions.Modules.Bool.Syntax,
        Actions.Modules.Col.Denotation,
        Actions.Modules.Col.Syntax,
        Actions.Modules.Eval.Denotation,
        Actions.Modules.Eval.Syntax,
        Actions.Modules.Expr.Denotation,
        Actions.Modules.Expr.Syntax,
        Actions.Modules.Fun.Denotation,
        Actions.Modules.Fun.Syntax,
        Actions.Modules.Stmt.Denotation,
        Actions.Modules.Stmt.Syntax,
        Actions.Modules.Str.Denotation,
        Actions.Modules.Str.Syntax,
        Definitions.Fun.Syntax,
        Definitions.Fun.Denotation,
        Definitions.Fun.Framework,
        Definitions.Program.Syntax,
        Definitions.Program.Denotation,
        Definitions.Program.Effects, 
        Definitions.Program.Handlers,
        Utils,
        
        -- Arith.Syntax, Arith.Denotation,
                        Attributes.Syntax, Attributes.Denotation, Attributes.Effects, Attributes.Handlers,
                        -- Bool.Syntax,  Bool.Denotation,   Bool.Effects, Bool.Handlers,
                        Entity.Syntax, Entity.Denotation, Entity.Effects, Entity.Handlers,
                        -- Expr.Syntax,  Expr.Denotation, 
                        -- Eval.Syntax,  Eval.Denotation,   Eval.Effects, Eval.Handlers,
                        -- Fun.Syntax,   Fun.Denotation,    Fun.Effects,  Fun.Handlers,
                        -- Col.Syntax,   Col.Denotation,
                        Layout.Syntax,Layout.Denotation, Layout.Effects, Layout.Handlers,
                        Page.Syntax, Page.Denotation,
                        -- Stmt.Syntax,  Stmt.Denotation,   Stmt.Effects, Stmt.Handlers,
                        Syntax,
                        Template.Syntax,
                        Render.Syntax, Render.Denotation,
                        Utils.Free, Utils.Handler, Utils.Composition,
                        Utils.Fix, Utils.Denote, Utils.Environment

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1,
                        containers,
                        constraints
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: AllowAmbiguousTypes,
                        DeriveFunctor,
                        EmptyCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        FunctionalDependencies,
                        GADTs,
                        InstanceSigs,
                        LambdaCase,
                        MultiParamTypeClasses,
                        RankNTypes,
                        ScopedTypeVariables,
                        TypeApplications,
                        TypeOperators,
                        UndecidableInstances
                        --this might couse problems

test-suite webdsl-tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Actions.ArithTest,
                        Actions.ArithBoolTest, 
                        Actions.BoolTest,
                        Actions.ColTest,
                        TestSyntax,
                        EntityTest,
                        Actions.ExprTest,
                        Actions.EvalTest,
                        Actions.FunTest,
                        Actions.LoopTest,
                        Actions.StmtTest,
                        Actions.StrTest,
                        LayoutTest,
                        XmlTest,
                        ActionsTest,
    build-depends:      base ^>=4.17.2.0, 
                        HUnit ^>=1.6,
                        webdsl-model
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions: FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        TypeOperators,
                        TypeApplications
    ghc-options:         -Wno-missing-fields
