cabal-version:      3.8
name:               webdsl-model
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aleksander Wolska
maintainer:         odderwiser@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Actions.Effects,
        Actions.Framework,
        Actions.Arith,
        Actions.Bool,
        Actions.Str,
        Actions.Syntax,
        Actions.Handlers.Cond,
        Actions.Handlers.Entity,
        Actions.Handlers.Env,
        Actions.Handlers.Heap,
        Actions.Handlers.Return,
        Actions.Modules.Arith.Denotation,
        Actions.Modules.Arith.Syntax,
        Actions.Modules.Bool.Denotation,
        Actions.Modules.Bool.Syntax,
        Actions.Modules.Col.Denotation,
        Actions.Modules.Col.Syntax,
        Actions.Modules.Entity.Denotation,
        Actions.Modules.Entity.Syntax,
        Actions.Modules.Eval.Denotation,
        Actions.Modules.Eval.Syntax,
        Actions.Modules.Expr.Denotation,
        Actions.Modules.Expr.Syntax,
        Actions.Modules.Fun.Denotation,
        Actions.Modules.Fun.Syntax,
        Actions.Modules.Stmt.Denotation,
        Actions.Modules.Stmt.Syntax,
        Actions.Modules.Str.Denotation,
        Actions.Modules.Str.Syntax,
        Actions.Values,
        Definitions.Entity.Syntax, 
        Definitions.Entity.Denotation,
        Definitions.Entity.Framework,
        Definitions.Fun.Syntax,
        Definitions.Fun.Denotation,
        Definitions.Fun.Framework,
        Definitions.GlobalVars.Syntax,
        Definitions.GlobalVars.Denotation,
        Definitions.GlobalVars.Effects,
        Definitions.GlobalVars.ActionsFramework,
        Definitions.GlobalVars.TemplatesFramework,
        Definitions.Pages.Syntax,
        Definitions.Pages.Denotation,
        Definitions.Pages.Framework,
        Definitions.Templates.Syntax,
        Definitions.Templates.Denotation,
        Definitions.Templates.Framework,
        Definitions.Program.Syntax,
        Definitions.Program.Denotation,
        Definitions.Program.Effects, 
        Definitions.Program.Handlers,
        Templates.Framework,
        Templates.Effects,
        Templates.Handlers.Env,
        Templates.Handlers.Render,
        Templates.Handlers.Layout,
        Templates.Modules.Attributes.Syntax,
        Templates.Modules.Attributes.Denotation,
        Templates.Modules.Layout.Syntax,
        Templates.Modules.Layout.Denotation,
        Templates.Modules.Lift.Syntax,
        Templates.Modules.Lift.Denotation,
        Templates.Modules.Page.Syntax,
        Templates.Modules.Page.Denotation,
        Templates.Modules.Render.Syntax,
        Templates.Modules.Render.Denotation,
        Templates.Syntax,
        Utils,
        
        -- Arith.Syntax, Arith.Denotation,
                        -- Attributes.Syntax, Attributes.Denotation, Attributes.Effects, Attributes.Handlers,
                        -- Layout.Syntax,Layout.Denotation, Layout.Effects, Layout.Handlers,
                        -- Page.Syntax, Page.Denotation,
                        -- Stmt.Syntax,  Stmt.Denotation,   Stmt.Effects, Stmt.Handlers,
                        Syntax,
                        -- Template.Syntax,
                        -- Render.Syntax, Render.Denotation,
                        Utils.Free, Utils.Handler, Utils.Composition,
                        Utils.Fix, Utils.Denote, Utils.Environment

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base >=4.18.2.1,
                        aeson,
                        bytestring,
                        containers,
                        directory,
                        tagsoup,
                        uuid,
                        utf8-string
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: AllowAmbiguousTypes,
                        DeriveFunctor,
                        DeriveGeneric,
                        EmptyCase,
                        FlexibleContexts,
                        FlexibleInstances,
                        FunctionalDependencies,
                        GADTs,
                        InstanceSigs,
                        LambdaCase,
                        MultiParamTypeClasses,
                        RankNTypes,
                        ScopedTypeVariables,
                        TypeApplications,
                        TypeOperators,
                        UndecidableInstances
                        --this might couse problems

test-suite webdsl-tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      Actions.ArithTest,
                        Actions.ArithBoolTest, 
                        Actions.BoolTest,
                        Actions.ColTest,
                        TestSyntax,
                        Actions.EntityTest,
                        Actions.ExprTest,
                        Actions.EvalTest,
                        Actions.FunTest,
                        Actions.GlobalVarTest,
                        Actions.LoopTest,
                        Actions.StmtTest,
                        Actions.StrTest,
                        Templates.GlobalVarTest,
                        Templates.LayoutTest,
                        Templates.PageTest,
                        Templates.TemplateTest,
                        Templates.XmlTest,
                        ActionsTest,
                        TemplatesTest
    build-depends:      base ^>=4.18.2.1, 
                        HUnit ^>=1.6,
                        webdsl-model
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions: FlexibleContexts,
                        FlexibleInstances,
                        InstanceSigs,
                        MultiParamTypeClasses,
                        TypeOperators,
                        TypeApplications
    ghc-options:         -Wno-missing-fields
